@@ -1,3 +1,4 @@
+* fix typo in GetStress method of Material/Crystal.
 * improve wording in Experiment class docstrings (#192)
 * fix typo in cache key of atomic structure factor (#189)
 * Use numpy>=2 as build dependency only for python>=3.9 (#188 by @t20100)
